--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </header>
       <section>
         <form class="search__container">
-            <input class="search__field" type="text" id="text" placeholder="Search" />
+            <input class="search__field" type="text" id="text" placeholder="Search" required/>
             <button type="submit" class="submit__btn"></button>
         </form>
       </section>
@@ -62,6 +62,7 @@
           </div>
         </div>
         <div class="meaning__container">
+          
         <!--  <p class="sideline">noun</p>
         </div>
         <div class="definition">
