--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
       </header>
       <section>
         <form class="search__container">
-            <input class="search__field" type="text" id="text" placeholder="Search" required/>
+            <input class="search__field" type="text" id="text" placeholder="Search for any word" />
             <button type="submit" class="submit__btn"></button>
+            <p class="error__message"></p>
         </form>
       </section>
       <section>
